tests/valid/preferGetPlayers.ts
// @ts-nocheck
const players = Players.GetPlayers();
