tests/invalid/noArrayPairs.ts
// @ts-nocheck
const arr = [1, 2, 3];
pairs(arr);
